--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-touch-callout: none; /* disable iOS menu */
-  touch-action: manipulation;   /* prevent default gestures */
-  -webkit-tap-highlight-color: transparent; /* remove tap highlight on mobile */
+  -webkit-touch-callout: none;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 #counter { font-size:1.6em; margin-bottom:10px; text-shadow:2px 2px 4px #000; }
@@ -31,7 +31,15 @@ body {
 #upgrades { display:flex; flex-wrap:wrap; justify-content:center; gap:8px; max-width:90%; max-height:40vh; overflow-y:auto; padding:10px; background:rgba(0,0,0,0.4); border-radius:10px; }
 .upgrade-btn { background:rgba(10,10,20,0.8); border:1px solid #333; padding:6px 10px; font-family:monospace; font-size:0.8em; min-width:150px; text-align:left; border-radius:4px; cursor:not-allowed; opacity:0.6; }
 .upgrade-btn.buyable { cursor:pointer; opacity:1; box-shadow:0 0 6px currentColor; }
-#blackout { position:fixed; inset:0; background:black; display:none; z-index:999; }
+#blackout {
+  position: fixed; inset:0;
+  background:black; color:white;
+  font-family: monospace;
+  font-size:3em; display:flex;
+  flex-direction:column; align-items:center; justify-content:center;
+  opacity:0; pointer-events:none; transition: opacity 2s ease; z-index:9999;
+}
+#blackout button { margin-top:30px; font-size:0.4em; padding:10px 20px; cursor:pointer; }
 #audioPlayer { display:none; }
 </style>
 </head>
@@ -51,78 +59,41 @@ body {
 <div id="blackout"></div>
 
 <!-- LOCAL AUDIO -->
-<audio id="clickSound" preload="auto">
-  <source src="audio/click.mp3" type="audio/mpeg">
-</audio>
-
-<audio id="upgradeSound" preload="auto">
-  <source src="audio/upgrade.mp3" type="audio/mpeg">
-</audio>
-
-<audio id="bgMusic" preload="auto" loop>
-  <source src="audio/bgmusic.mp3" type="audio/mpeg">
-</audio>
+<audio id="clickSound" preload="auto"><source src="audio/click.mp3" type="audio/mpeg"></audio>
+<audio id="upgradeSound" preload="auto"><source src="audio/upgrade.mp3" type="audio/mpeg"></audio>
+<audio id="bgMusic" preload="auto" loop><source src="audio/bgmusic.mp3" type="audio/mpeg"></audio>
 
 <script>
 /* ======= GAME STATE ======= */
-let markeys=0, clickPower=1, prestigePoints=0, prestigeMultiplier=1, corrupted=false, JX1DX1=false;
+let markeys=0, clickPower=1, prestigePoints=0, prestigeMultiplier=1, corrupted=false;
 const MIN_PRESTIGE=1000000;
+const WIN_MARK = 1_000_000_000_000_000_000; // 1e18
+let hasWon=false, newGamePlusCount=0;
 
 /* ======= DOM ======= */
-const counter = document.getElementById('counter');
-const markiplier = document.getElementById('markiplier');
-const upgradesDiv = document.getElementById('upgrades');
-const prestigeInfo = document.getElementById('prestigeInfo');
-const prestigeBtn = document.getElementById('prestigeBtn');
-const prestigeCostEl = document.getElementById('prestigeCost');
-const blackout = document.getElementById('blackout');
-markiplier.addEventListener('contextmenu', e => e.preventDefault());
+const counter=document.getElementById('counter');
+const markiplier=document.getElementById('markiplier');
+const upgradesDiv=document.getElementById('upgrades');
+const prestigeInfo=document.getElementById('prestigeInfo');
+const prestigeBtn=document.getElementById('prestigeBtn');
+const prestigeCostEl=document.getElementById('prestigeCost');
+const blackout=document.getElementById('blackout');
+markiplier.addEventListener('contextmenu', e=>e.preventDefault());
 
-const clickSound = document.getElementById('clickSound');
-const upgradeSound = document.getElementById('upgradeSound');
-const bgMusic = document.getElementById('bgMusic');
-bgMusic.volume = 0.25; // very quiet background
-let bgStarted = false;
-document.body.addEventListener('click', () => {
-  if (!bgStarted) {
-    bgMusic.play().catch(()=>{});
-    bgStarted = true;
-  }
-}, { once: true });
+const clickSound=document.getElementById('clickSound');
+const upgradeSound=document.getElementById('upgradeSound');
+const bgMusic=document.getElementById('bgMusic');
+bgMusic.volume=0.25; let bgStarted=false;
+document.body.addEventListener('click', ()=>{
+  if(!bgStarted){ bgMusic.play().catch(()=>{}); bgStarted=true; }
+},{once:true});
 
 /* ======= NAME PARTS ======= */
-const prefixes = [
-  "Basic","Quantum","Neural","Void","Digital","Ghost","Cyber","Encrypted",
-  "Dark","Omega","Virtual","Fractured","Recursive","Obsidian","Prime",
-  "Synthetic","Hyper","Alpha","Beta","Gamma","Delta","Eternal","Infinite",
-  "Reactive","Adaptive","Chaotic","Silent","Shadow","Crimson","Azure","Titan",
-  "Omega","Exotic","Luminous","Corrupted","Spectral","Binary","Thermal","Null",
-  "Primal","Hardened","Volatile","Compressed","Expanded","Decentralized",
-  "Mirrored","Stealth","Encrypted","Classified","Legacy","Forbidden"
-];
+const prefixes=["Basic","Quantum","Neural","Void","Digital","Ghost","Cyber","Encrypted","Dark","Omega","Virtual","Fractured","Recursive","Obsidian","Prime","Synthetic","Hyper","Alpha","Beta","Gamma","Delta","Eternal","Infinite","Reactive","Adaptive","Chaotic","Silent","Shadow","Crimson","Azure","Titan","Omega","Exotic","Luminous","Corrupted","Spectral","Binary","Thermal","Null","Primal","Hardened","Volatile","Compressed","Expanded","Decentralized","Mirrored","Stealth","Encrypted","Classified","Legacy","Forbidden"];
+const nouns=["Click","Core","Node","Pulse","Glitch","Kernel","Thread","Cipher","Payload","Stack","Shard","Probe","Injector","Snapshot","Signal","Loop","Hack","Exploit","Process","Daemon","Vector","Stream","Cache","Index","Routine","Channel","Register","Scheduler","Interrupt","Bus","Topology","Pointer","Reference","Segment","Partition","Cluster","Replica","Beacon","Scanner","Listener","Emitter","Decoder","Encoder","Transmitter","Receiver","Sandbox","Context","Instance","Checkpoint","Trace","Signature","Blueprint","Schema","Manifest"];
+const suffixes=["Module","Engine","Protocol","Matrix","Driver","Entity","Framework","Gateway","Controller","Executor","Observer","Interface","Subsystem","Compiler","Injector","Resolver","Assembler","Orchestrator","Daemon","Validator","Handler","Mapper","Bridge","Monitor","Pipeline","Scheduler","Dispatcher","Coordinator","Supervisor","Watcher","Service","Endpoint","Adapter","Wrapper","Facade","Abstraction","Layer","Shell","Container","Node","Operator","Directive","Instruction","Routine","Sequence","Flow","Graph","Model","Profile","Constructor","Analyzer","Generator","Emitter","Accumulator"];
 
-const nouns = [
-  "Click","Core","Node","Pulse","Glitch","Kernel","Thread","Cipher","Payload",
-  "Stack","Shard","Probe","Injector","Snapshot","Signal","Loop","Hack","Exploit",
-  "Process","Daemon","Vector","Stream","Cache","Index","Routine","Channel",
-  "Register","Scheduler","Interrupt","Bus","Topology","Pointer","Reference",
-  "Segment","Partition","Cluster","Replica","Beacon","Scanner","Listener",
-  "Emitter","Decoder","Encoder","Transmitter","Receiver","Sandbox","Context",
-  "Instance","Checkpoint","Trace","Signature","Blueprint","Schema","Manifest"
-];
-
-const suffixes = [
-  "Module","Engine","Protocol","Matrix","Driver","Entity","Framework","Gateway",
-  "Controller","Executor","Observer","Interface","Subsystem","Compiler","Injector",
-  "Resolver","Assembler","Orchestrator","Daemon","Validator","Handler","Mapper",
-  "Bridge","Monitor","Pipeline","Scheduler","Dispatcher","Coordinator","Supervisor",
-  "Watcher","Service","Endpoint","Adapter","Wrapper","Facade","Abstraction",
-  "Layer","Shell","Container","Node","Operator","Directive","Instruction",
-  "Routine","Sequence","Flow","Graph","Model","Profile","Constructor","Analyzer",
-  "Generator","Emitter","Accumulator"
-];
-
-/* ======= RARITY BY COST ======= */
+/* ======= RARITY ======= */
 function rarityForCost(cost){
   if(cost<50) return {name:"Common", color:"#aaa", multiplier:0.05};
   if(cost<1000) return {name:"Uncommon", color:"#0f0", multiplier:0.25};
@@ -145,37 +116,32 @@ function prestigeRequiredForCost(cost){
 }
 
 /* ======= UPGRADES ======= */
-const upgrades = [];
-const BASE_COST = 10, COST_GROWTH = 1.07; // 5% per upgrade
-function pick(arr, seed) { return arr[seed % arr.length]; }
-
-for (let i = 0; i < 700; i++) {
-  const baseCost = Math.floor(BASE_COST * Math.pow(COST_GROWTH, i / 1.2));
-  const rarity = rarityForCost(baseCost);
-  const requiredPrestige = prestigeRequiredForCost(baseCost);
+const upgrades=[];
+const BASE_COST=10, COST_GROWTH=1.07;
+function pick(arr, seed){return arr[seed % arr.length];}
+for(let i=0;i<700;i++){
+  const baseCost=Math.floor(BASE_COST*Math.pow(COST_GROWTH,i/1.2));
+  const rarity=rarityForCost(baseCost);
+  const requiredPrestige=prestigeRequiredForCost(baseCost);
   upgrades.push({
     name: pick(prefixes,i*7)+" "+pick(nouns,i*13)+" "+pick(suffixes,i*29),
-    baseCost,
-    cost: baseCost,
-    power: Math.max(1, Math.floor(baseCost * 0.25) + rarity.multiplier),
-    rarity,
-    requiredPrestige
+    baseCost, cost: baseCost,
+    power: Math.max(1,Math.floor(baseCost*0.25)+rarity.multiplier),
+    rarity, requiredPrestige
   });
 }
 
 /* ======= UI ======= */
-function getPrestigeCost(){ return MIN_PRESTIGE; }
-
+function getPrestigeCost(){return MIN_PRESTIGE;}
 function updateUI(){
-  counter.textContent = `${markeys.toLocaleString(undefined, {maximumFractionDigits:2})} Markeys | Power ${parseFloat(clickPower.toFixed(2))}`;
-  prestigeInfo.textContent = `Prestige: ${prestigePoints} (x${prestigeMultiplier.toFixed(2)})`;
-  prestigeCostEl.textContent = `(Requires ${getPrestigeCost().toLocaleString()} Markeys)`;
+  counter.textContent=`${markeys.toLocaleString(undefined,{maximumFractionDigits:2})} Markeys | Power ${parseFloat(clickPower.toFixed(2))}`;
+  prestigeInfo.textContent=`Prestige: ${prestigePoints} (x${prestigeMultiplier.toFixed(2)})`;
+  prestigeCostEl.textContent=`(Requires ${getPrestigeCost().toLocaleString()} Markeys)`;
   [...upgradesDiv.children].forEach((b,i)=>{
-    const u = upgrades[i];
+    const u=upgrades[i];
     b.classList.toggle('buyable', markeys>=u.cost && !corrupted && prestigePoints>=u.requiredPrestige);
   });
 }
-
 function renderUpgrades(){
   upgradesDiv.innerHTML='';
   upgrades.forEach((u,i)=>{
@@ -184,51 +150,72 @@ function renderUpgrades(){
     b.style.color=u.rarity.color;
     b.style.borderColor=u.rarity.color;
     b.innerHTML=`<small>${u.name}</small><br><strong>${u.cost.toLocaleString()}</strong><br><small>${u.rarity.name}</small>`;
-    b.onclick = ()=>buyUpgrade(i);
+    b.onclick=()=>buyUpgrade(i);
     upgradesDiv.appendChild(b);
   });
 }
 
-/* ======= GAMEPLAY ======= */
-let clickCooldown = false;           // Add cooldown state
-const CLICK_COOLDOWN_MS = 200;       // cooldown between clicks
+/* ======= WIN / NEW GAME+ ======= */
+function checkWinCondition(){
+  if(hasWon) return;
+  if(markeys>=WIN_MARK){
+    hasWon=true;
+    triggerWin();
+  }
+}
+function triggerWin(){
+  corrupted=true;
+  blackout.innerHTML=`<div>YOU WIN</div><button id="ngPlusBtn">NEW GAME+</button>`;
+  blackout.style.display="flex";
+  requestAnimationFrame(()=>{
+    blackout.style.opacity="1";
+    blackout.style.pointerEvents="auto";
+  });
+  document.getElementById("ngPlusBtn").onclick=startNewGamePlus;
+}
+function startNewGamePlus(){
+  newGamePlusCount++;
+  markeys=0;
+  clickPower=1+newGamePlusCount*2;
+  prestigePoints=0;
+  prestigeMultiplier=1+newGamePlusCount*0.25;
+  upgrades.forEach(u=>u.cost=u.baseCost);
+  corrupted=false;
+  hasWon=false;
+  blackout.style.opacity="0";
+  blackout.style.pointerEvents="none";
+  setTimeout(()=>{ blackout.style.display="none"; blackout.innerHTML=""; },2000);
+  updateUI();
+}
 
+/* ======= GAMEPLAY ======= */
+let clickCooldown=false;
+const CLICK_COOLDOWN_MS=200;
 function buyUpgrade(i){
   const u=upgrades[i];
   if(markeys<u.cost || corrupted || prestigePoints<u.requiredPrestige) return;
   markeys-=u.cost;
   clickPower+=u.power*prestigeMultiplier;
-  upgradeSound.currentTime = 0; upgradeSound.play();
-  updateUI();
+  upgradeSound.currentTime=0; upgradeSound.play();
+  updateUI(); checkWinCondition();
 }
-
-markiplier.onclick = ()=>{
-  if(corrupted || clickCooldown) return;  // prevent spamming
-
-  // start cooldown and disable clicks visually
-  clickCooldown = true;
-  markiplier.style.pointerEvents = 'none';  // prevents wobble/scale
-
-  markeys += clickPower;
-  clickSound.currentTime = 0;
-  clickSound.play();
-  updateUI();
-
-  // reset cooldown and re-enable clicking
-  markiplier.style.opacity = '0.6';
+markiplier.onclick=()=>{
+  if(corrupted || clickCooldown) return;
+  clickCooldown=true; markiplier.style.pointerEvents='none';
+  markeys+=clickPower; clickSound.currentTime=0; clickSound.play();
+  updateUI(); checkWinCondition();
+  markiplier.style.opacity='0.6';
   setTimeout(()=>{
-    clickCooldown = false;
-    markiplier.style.pointerEvents = 'auto'; // re-enable clicks
-    markiplier.style.opacity = '1';
-  }, CLICK_COOLDOWN_MS);
+    clickCooldown=false; markiplier.style.pointerEvents='auto'; markiplier.style.opacity='1';
+  },CLICK_COOLDOWN_MS);
 };
 
 /* ======= PRESTIGE ======= */
-prestigeBtn.onclick = ()=>{
+prestigeBtn.onclick=()=>{
   const cost=getPrestigeCost();
   if(markeys<cost) return;
-  prestigePoints += Math.floor(Math.sqrt(markeys/cost));
-  prestigeMultiplier = 1 + prestigePoints*0.25;
+  prestigePoints+=Math.floor(Math.sqrt(markeys/cost));
+  prestigeMultiplier=1+prestigePoints*0.25;
   markeys=0; clickPower=prestigeMultiplier;
   upgrades.forEach(u=>u.cost=u.baseCost);
   updateUI();
@@ -239,5 +226,4 @@ renderUpgrades();
 updateUI();
 </script>
 </body>
-
 </html>
